add dat.gui to observe several variable easily.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, user-scalable=no" />
         <script type="text/javascript" src="js/phaser.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.5/dat.gui.min.js"></script>
         <style>
             body {
                 padding: 0px;
